Resolved errors and added auto migration updation at startup including health check

--- a/ReferenceWebApi/appsettings.json
+++ b/ReferenceWebApi/appsettings.json
@@ -1,8 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Database": {
+    "ApplyMigrationsOnStartup": true
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ReferenceWebApiDb;Trusted_Connection=true;MultipleActiveResultSets=true"
+  },
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
     }
   },
   "AllowedHosts": "*"
