Added username identification and db ingestion, Correlation middleware & performance logging middleware

--- a/ReferenceWebApi.Infrastructure/ReferenceWebApi.Infrastructure.csproj
+++ b/ReferenceWebApi.Infrastructure/ReferenceWebApi.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
       <PrivateAssets>all</PrivateAssets>
@@ -23,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ReferenceWebApi.Application\ReferenceWebApi.Application.csproj" />
     <ProjectReference Include="..\ReferenceWebApi.Domain\ReferenceWebApi.Domain.csproj" />
   </ItemGroup>
 
