--- a/ReferenceWebApi/appsettings.json
+++ b/ReferenceWebApi/appsettings.json
@@ -6,13 +6,32 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ReferenceWebApiDb;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
   "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.EntityFrameworkCore": "Warning",
+        "System": "Warning"
       }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "CompanyName.ProjectName.Api"
     }
+  },
+  "Caching": {
+    "DefaultExpirationMinutes": 10,
+    "SlidingExpirationMinutes": 5
   },
   "AllowedHosts": "*"
 }
